--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".location.LocationService"
+            android:foregroundServiceType="location"
+            android:enabled="true"/>
     </application>
 
 </manifest>
