--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,8 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'androidx.preference:preference-ktx:1.2.0'
 
@@ -56,6 +53,7 @@ dependencies {
 
     // Room
     implementation "androidx.room:room-ktx:2.5.2"
+    implementation 'androidx.test:rules:1.5.0'
     kapt "androidx.room:room-compiler:2.5.2"
 
     // Coroutines
@@ -65,4 +63,25 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
+
+
+
+    // TEST
+
+    // Зависимости для инструментальных тестов (androidTest)
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // Зависимости для работы с фрагментами
+    debugImplementation 'androidx.fragment:fragment-testing:1.6.0'
+
+    // Зависимости для работы с Mock объектами
+    testImplementation 'org.mockito:mockito-core:5.3.1'
+    androidTestImplementation 'org.mockito:mockito-android:3.12.4'
+
+    // Зависимости для работы с JUnit
+    testImplementation 'junit:junit:4.13.2'
+
+
+
 }
